# openssl-gcb

./: .travis.yml  CMakeLists.txt  base64.cpp  base64.h  gcm.h  libgcb.cpp  libgcb.h
tests/: tests.cpp
